add createfilm and associated files [delivers #184347819]
